# ATCRS

./: .gitignore  package-lock.json  package.json  run.ps1
backend/: README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
backend/api/: admin.py  permissions.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_applicantprofile_created_at_and_more.py  0003_choice_exam_applicantexam_question_choice_question_and_more.py  0004_remove_exam_course.py  0005_applicantanswer_multiple_submission_flag_and_more.py  0006_remove_question_correct_choice_exam_max_applicants.py  0007_course_min_score.py  0008_applicantexam_recommended_course.py  0009_alter_applicantexam_unique_together.py
backend/api/models/: admission.py  auth.py  exam.py
backend/api/serializers/: AdmissionSerializer.py  ApplicantsSerializer.py  RegistrationSerializers.py  SuperAdminUserSerializer.py
backend/api/services/: admin_services.py  applicant_services.py  super_admin_services.py
backend/config/: settings.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/composables/: useAdminUsers.ts  useRedirectAfterLogin.ts  useRegister.ts
frontend/src/lib/: helpers.ts  utils.ts
frontend/src/pages/: LandingPage.vue
frontend/src/router/: index.ts
frontend/src/services/: AdminManageExam.ts  adminDashboard.ts  adminQuestions.ts  adminUsers.ts  applicantExamSummary.ts  applicantServices.ts  applicantUpcomingExamsServices.ts  applicantUsers.ts  course.ts  courseServices.ts  examScores.service.ts  (+2 more)
(+65 files in other folders)
